--- a/CounterStrikecheats/CounterStrikecheats/CounterStrikecheats.vcxproj
+++ b/CounterStrikecheats/CounterStrikecheats/CounterStrikecheats.vcxproj
@@ -132,6 +132,7 @@
     <ClCompile Include="Cheatsmember.cpp" />
     <ClCompile Include="CSFly.cpp" />
     <ClCompile Include="GetModuleNewVersion.cpp" />
+    <ClCompile Include="oldCsFly.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
