--- a/CounterStrikecheats/CounterStrikecheats/CounterStrikecheats.vcxproj.filters
+++ b/CounterStrikecheats/CounterStrikecheats/CounterStrikecheats.vcxproj.filters
@@ -24,5 +24,8 @@
     <ClCompile Include="Cheatsmember.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="oldCsFly.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
