--- a/CounterStrikecheats/CounterStrikecheats/CounterStrikecheats.vcxproj
+++ b/CounterStrikecheats/CounterStrikecheats/CounterStrikecheats.vcxproj
@@ -130,16 +130,14 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Cheat.cpp" />
-    <ClCompile Include="Cheatsmember.cpp" />
     <ClCompile Include="CSFly.cpp" />
-    <ClCompile Include="GetModuleNewVersion.cpp" />
-    <ClCompile Include="oldCsFly.cpp" />
-    <ClCompile Include="ReadAddress.cpp" />
+    <ClCompile Include="FileName.cpp" />
+    <ClCompile Include="ScanAddress.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Cheat.h" />
     <ClInclude Include="Library.h" />
-    <ClInclude Include="ReadAddress.h" />
+    <ClInclude Include="ScanAddress.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
